...
        .frame(maxWidth: .infinity)
        .frame(maxHeight: Constants.Numbers.maxHeight)
    }
    
    enum Constants {
        enum Text {
            static let title = "KittyPedia"
            static let subtitle = "GET TO KNOW CAT BREEDS"
        }
        
        enum Image {
            static let paw = "pawprint.fill"
        }
        
...
