...
        }
        .foregroundColor(.gray)
    }
    
    enum Constants {
        enum Text {
            static let endMessage = "We got to the end!"
            static let loadMore = "Load More"
            static let errorMessage = "Unable to load data"
            static let tryAgain = "Try Again"
            static let loading = "Loading adorable cats..."
        }
        
        enum Image {
            static let cat = "cat.fill"
            static let sadCat = "sadCat"
            static let warning = "exclamationmark.triangle.fill"
            static let loadMoreButtonIdentifier = "LoadMoreButton"
            static let tryAgainArrow = "arrow.counterclockwise"
        }
    }
}

#Preview {
...
