...
}

#Preview {
    let sampleBreed = Breed(breedResponse:
                                BreedResponse(
                                    id: "1",
                                    name: "Siberian",
                                    temperament: "Playful, Active",
                                    origin: "Russia",
                                    lifeSpan: "12-15",
                                    weight: BreedWeightResponse(imperial: "11-17", metric: "5-8"),
                                    description: "A friendly and intelligent cat breed.",
                                    adaptability: 5,
                                    affectionLevel: 5,
...
